fixed dark mode

--- a/frontend/src/Css/sensorForm.css
+++ b/frontend/src/Css/sensorForm.css
@@ -12,7 +12,6 @@
 }
 
 .input-form {
-  background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
